# scoutbot

./: .env.example  .gitignore  CHANGELOG.md  README.ru.md  pyproject.toml  start.sh
.github/ISSUE_TEMPLATE/: issue.md
.github/PULL_REQUEST_TEMPLATE/: pr.md
.github/release-please/: config.json
.github/workflows/: release-please.yml
config/: settings.yml  start.py
config/seeds/: noders.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEV_GUIDE.md  ROADMAP.md  SDLC.md  SECURITY.md  SPEC.md
src/scoutbot_module/bot/: app.py  auth.py  formatters.py  handlers.py  keyboards.py
src/scoutbot_module/changedetection/: client.py  payloads.py  sync.py
src/scoutbot_module/core/: cli.py  log.py  paths.py  settings.py
src/scoutbot_module/db/: migrations.py  models.py  repo.py  session.py
src/scoutbot_module/discovery/: adapters.py  feeds.py  fetch.py  kinds.py  links.py  service.py  socials.py  urls.py
src/scoutbot_module/intelligence/: classify.py  dedupe.py
src/scoutbot_module/services/: discovery.py  notifications.py  signals.py  targets.py
src/scoutbot_module/web/: app.py  routes.py  schemas.py
tests/: test_changedetection_payloads.py  test_config.py  test_db_models.py  test_dedupe.py  test_discovery.py  test_smoke.py  test_telegram.py  test_webhook.py
