[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoutbot"
version = "0.0.0"
description = "Telegram-first self-hosted competitor and public source monitoring assistant"
readme = "README.ru.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.0",
    "python-telegram-bot>=22.0,<23.0",
    "pydantic>=2.0,<3.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "httpx>=0.28,<1.0",
    "sqlmodel>=0.0.22,<0.1",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "httpx>=0.28,<1.0",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.6,<10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: tests that involve external services, webhook flows, network calls, or slow filesystem checks",
    "integration: tests that require changedetection.io, Telegram, or other external service boundaries",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"